Add a pasta scripts contendo create-point.js

--- a/create-point.html
+++ b/create-point.html
@@ -44,6 +44,7 @@
               <select name="uf">
                 <option value="">Selecione o estado</option>
               </select>
+              <input type="hidden" name="state" />
             </div>
             <div class="field">
               <label for="city">Cidade</label>
@@ -59,5 +60,7 @@
         <button type="submit">Cadastrar ponto de coleta</button>
       </form>
     </div>
+
+    <script src="scripts/create-point.js"></script>
   </body>
 </html>
