--- a/create-point.html
+++ b/create-point.html
@@ -16,7 +16,7 @@
     <div id="page-create-point">
       <header>
         <img src="/icones/logo.svg" alt="Logomarca" />
-        <a href="#"><span></span>Voltar para home</a>
+        <a href="index.html"><span></span>Voltar para home</a>
       </header>
       <form action="">
         <h1>Cadastro do ponto de coleta</h1>
